--- a/.env
+++ b/.env
@@ -16,6 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
+APP_DEBUG=0
 APP_SECRET=bd4587ed38636f6602ba13aa4ef6268b
 ###< symfony/framework-bundle ###
 
